# CLion

./: CMakeLists.txt  Estudiante.cpp  Estudiante.h  Funciones.cpp  Funciones.h  Persona.cpp  Persona.h  README.md  main.cpp  nuevo.cpp
